--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,113 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Naylê Duarte">
         <title>Studion</title>
     </head>
 
     <body>
-        <h1>Hello World</h1>
-        <h6>Hello HTML!</h6>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere quas quisquam molestias. Consectetur exercitationem laudantium nostrum tenetur voluptatem vitae, quidem cum. In beatae odit numquam accusantium perferendis adipisci, quaerat enim.</p>
+        <nav>
+            <h1>Studi<span>on </span>Eventos<span></span></h1>
+            <ul>
+                <li>
+                    <a href="#empresa">
+                        Empresa
+                    </a>
+                </li>
+                <li>
+                    <a href="#eventos">
+                        Eventos
+                    </a>
+                </li>
+                <li>
+                    <a href="#galeria">
+                        Galeria
+                    </a>
+                </li>
+                <li>
+                    <a href="#depoimentos">
+                        Depoimentos
+                    </a>
+                </li>
+                <li>
+                    <a href="#contatos">
+                        Contatos
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        
+        <header>
+            <div id="slider">
+                <div class="slide">
+                    <h6><span>Próximo Eventos</span> - Dia 25 de Setembro ás 19h</h6>
+                    <h2><span>Creative</span> Minds</h2>
+                    <button>Saiba Mais</button>
+                </div>
+            </div>
+        </header>
+
+        <main>
+            <section>
+                <ul>
+                    <li>
+                        <h3>+ de 500</h3>
+                        eventos realizados
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3>+ de 1.000.000</h3>
+                        de ingressos vendidos
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3>+ de 300</h3>
+                        empresas atendidas
+                    </li>
+                </ul>
+            </section>
+
+            <section>
+                <div>
+                    <img src="C:\Users\nayle\OneDrive\Área de Trabalho\PROJETO IMAGINE SCHOOL\studion\src\images"/>
+                    <h6>Fazemos o seu envento acontecer</h6>
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reprehenderit vitae sapiente incidunt consequuntur dolorem debitis nulla, possimus, quia expedita perferendis porro fugit labore quisquam voluptatibus corporis. Accusamus, aperiam sapiente!</h4>
+                    <p>
+                    <button>Saiba Mais</button>
+                    </p>
+                </div>
+            </section>
+
+            <section>
+                <div>
+                    <h6>
+                        Você informa a temática e nós planejamos um evento com tecnologia e
+                    </h6>
+                    <h2><span>Muito+ </span>Diversão</h2>
+                    <button>Faça sua cotação</button>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <h2>Studi<span>on </span>Eventos<span></span></h2>
+            <form>
+                <label>Receba News e Promoções</label>
+                <input type="email" placeholder="E-Mail"/>
+                <button type="submit">Enviar</button>
+            </form>
+
+            <ul>
+                <li><a href="https://facebook.com/" target="_blank">Facebook</a></li>
+                <li><a href="https://twitter.com/" target="_blank">Twitter</a></li>
+                <li><a href="https://youtube.com/" target="_blank">Youtube</a></li>
+            </ul>
+            <hr />
+            <p>
+                <small>Studi<span>ON</span> - Todos os direitos Reservados</small>
+            </p>
+        </footer>  
     </body>
 </html>
