--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <nav>
-            <h1>Studi<span>on </span>Eventos<span></span></h1>
+            <h1>Studi<span>on</span><span>Eventos</span></h1>
             <ul>
                 <li>
                     <a href="#empresa">
@@ -43,7 +43,7 @@
         <header>
             <div id="slider">
                 <div class="slide">
-                    <h6><span>Próximo Eventos</span> - Dia 25 de Setembro ás 19h</h6>
+                    <h6><span>Próximo Evento</span> - Dia 25 de Setembro ás 19h</h6>
                     <h2><span>Creative</span> Minds</h2>
                     <button>Saiba Mais</button>
                 </div>
@@ -54,19 +54,19 @@
             <section>
                 <ul>
                     <li>
-                        <h3>+ de 500</h3>
+                        <h3>+ de 500 </h3>
                         eventos realizados
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <h3>+ de 1.000.000</h3>
+                        <h3>+ de 1.000.000 </h3>
                         de ingressos vendidos
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <h3>+ de 300</h3>
+                        <h3>+ de 300 </h3>
                         empresas atendidas
                     </li>
                 </ul>
@@ -74,12 +74,13 @@
 
             <section>
                 <div>
-                    <img src="C:\Users\nayle\OneDrive\Área de Trabalho\PROJETO IMAGINE SCHOOL\studion\src\images"/>
+                    <img src="./images/institutional.jpg"/>
                     <h6>Fazemos o seu envento acontecer</h6>
-                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error reprehenderit vitae sapiente incidunt consequuntur dolorem debitis nulla, possimus, quia expedita perferendis porro fugit labore quisquam voluptatibus corporis. Accusamus, aperiam sapiente!</h4>
+                    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. </h4>
                     <p>
-                    <button>Saiba Mais</button>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus culpa, voluptatibus illum ullam eum dolore maxime voluptates possimus optio commodi iusto quia sunt architecto porro dicta cum molestiae eius nisi.
                     </p>
+                    <button>Saiba Mais</button>
                 </div>
             </section>
 
