--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
     </head>
 
     <body>
-        <nav>
+        <nav class="navbar">
             <h1>Studi<span>on</span><span>Eventos</span></h1>
-            <ul>
+            <ul class="navbar__links">
                 <li>
                     <a href="#empresa">
                         Empresa
